<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/creditCardDetails"
        android:layout_margin="19dp"
        android:maxLength="19"
        android:inputType="number"
        android:hint="@string/cardNo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/creditCardDetails"
        android:id="@+id/cvvdate">
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/expiryDate"
        android:layout_weight="1.5"
        android:hint="@string/expiryDate"
        android:inputType="date"
        android:maxLength="5"
        android:layout_margin="19dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cvv"
        android:layout_weight="1"
        android:hint="@string/cvv"
        android:inputType="numberPassword"
        android:maxLength="3"
        android:layout_margin="19dp" />
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/creditCardName"
        android:layout_below="@+id/cvvdate"
        android:hint="@string/cardName"
        android:layout_margin="19dp" />



    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/creditCardName"
        android:layout_margin="15dp"
        android:text="@string/proceed"/>


</RelativeLayout>